<resources>
    <string name="app_name">androidImgur_CustomGallery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title_Blank">Title</string>
    <string name="Title_Views">Views</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</string>

    <string name="hot">Hot</string>
    <string name="Top">Top</string>
    <string name="User">User</string>

    <string name="Description">No Description</string>
</resources>
