<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.macmini_desarrollo2.androidimgur_customgallery.MainActivity">

    <LinearLayout android:layout_height="40dp"
        android:layout_width="match_parent"
        android:id="@+id/Linear_1"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <Button android:layout_height="match_parent"
            android:layout_width="100dp"
            android:text="@string/hot"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/hotBTN"/>
        <Button android:layout_height="match_parent"
            android:layout_width="100dp"
            android:text="@string/Top"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/topBTN"
            android:layout_marginLeft="20dp"/>

        <Button android:layout_height="match_parent"
            android:layout_width="100dp"
            android:text="@string/User"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/userBTN"
            android:layout_marginLeft="20dp"
            />
        </LinearLayout>


   <LinearLayout android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/mainLayout"
       android:orientation="vertical"
       android:layout_below="@+id/Linear_1"
       android:layout_marginBottom="40dp">
       </LinearLayout>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/colorPrimaryDark"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <Button android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/aboutUS"
        android:background="@drawable/about_icn"
        />

    <Button android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="250dp"
        android:id="@+id/sortDialog_1"
        android:background="@drawable/sort_icn"
        />



</LinearLayout>


</RelativeLayout>
